@@ -77,6 +77,13 @@ SCALE rgb 1.5 2.5   255 0 0
 SCALE rgb 2.5 3.5   255 255 0  
 SCALE rgb 3.5 100   255 0 255  
 
+SCALE rainbow 0 15  255 0 0    255 255 0
+SCALE rainbow 15 30  255 255 0    0 255 0
+SCALE rainbow 30 45 0 255 0    0 255 255
+SCALE rainbow 45 60  0 255 255    0 0 255
+SCALE rainbow 60 75 0 0 255    255 0 255
+SCALE rainbow 75 100  255 0 255    255 0 255
+
 INCLUDE test.conf
 
 # SET rrd_default_path /usr/local/share/cacti/plugins/weathermap
@@ -204,20 +211,28 @@ NODE master
 	POSITION 100 500
 
 NODE sub1
-	ICON 16 16 images/red-ball-64.png
+	ICON 16 16 images/grey-ball-64.png
 	POSITION master 23 -70
+        USEICONSCALE rainbow in
+        TARGET static:20:33
 
 NODE sub2
-	ICON 16 16 images/green-ball-64.png
+	ICON 16 16 images/grey-ball-64.png
 	POSITION sub1 0 18
+        USEICONSCALE rainbow in
+        TARGET static:50:33
 
 NODE sub3
 	ICON 16 16 images/grey-ball-64.png
 	POSITION sub2 0 18
+        USEICONSCALE rainbow in
+        TARGET static:70:33
 
 NODE sub4
-	ICON 16 16 images/red-ball-64.png
+	ICON 16 16 images/grey-ball-64.png
 	POSITION sub3 0 18
+        USEICONSCALE rainbow in
+        TARGET static:90:33
 
 NODE t1
 	LABEL Server 1
